@@ -6,10 +6,10 @@ django-mysql~=4.7
 django-ninja~=0.20
 djangorestframework>=3.13,<4.0
 djangorestframework-simplejwt~=5.2
-fabric>=3.0.0,<3.1
+fabric>=2.7.1,<3.0
 Markdown~=3.4
 mysqlclient~=2.1
-patchwork==1.0.1
+patchwork~=1.0.1
 Pillow~=9.0
 drf-nested-routers~=0.93
 drf-yasg~=1.21
